--- a/src/components/Browser.scss
+++ b/src/components/Browser.scss
@@ -11,6 +11,6 @@
   align-self: center;
 
   @media only screen and (max-device-width: 600px) {
-    border-radius: 10px;
+    border-radius: 12px;
   }
 }
