--- a/src/components/BrowserNav.scss
+++ b/src/components/BrowserNav.scss
@@ -2,7 +2,7 @@
   display: flex;
   flex-direction: row;
   background: #dadada;
-  width: auto;
+  width: 100%;
   height: 4vw;
   border-top-left-radius: 20px;
   border-top-right-radius: 20px;
@@ -10,6 +10,9 @@
   @media only screen and (max-device-width: 600px) {
     border-top-left-radius: 6px;
     border-top-right-radius: 6px;
+    margin-top: -1.5px;
+    margin-left: -1px;
+    width: 89vw;
   }
 }
 
